// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analytical Card Render without Crashing 1`] = `
<DocumentFragment>
  <ui5-card
    ui5-card=""
  >
    <div
      class="AnalyticalCard-content"
    >
      <span
        class="Text-text"
      >
        I'm a content!
      </span>
    </div>
  </ui5-card>
</DocumentFragment>
`;

exports[`Analytical Card with AnalyticalCardHeader 1`] = `
<DocumentFragment>
  <ui5-card
    ui5-card=""
  >
    <div
      aria-labelledby="1337-title 1337-subtitle 1337-unitOfMeasurement 1337-mainIndicator  1337-details"
      aria-roledescription="Card Header"
      class="AnalyticalCardHeader-cardHeader"
      data-sap-ui-fastnavgroup="true"
      id="1337"
      role="group"
      slot="header"
      tabindex="0"
    >
      <div
        class="AnalyticalCardHeader-headerTitles"
      >
        <div
          class="AnalyticalCardHeader-headerFirstLine"
        >
          <span
            class="AnalyticalCardHeader-headerText"
            id="1337-title"
            role="heading"
          >
            Header Title
          </span>
        </div>
      </div>
    </div>
    <div
      class="AnalyticalCard-content"
    >
      <span
        class="Text-text"
      >
        I'm a content!
      </span>
    </div>
  </ui5-card>
</DocumentFragment>
`;

exports[`Analytical Card with custom header 1`] = `
<DocumentFragment>
  <ui5-card
    ui5-card=""
  >
    <div>
      I'm a header!
    </div>
    <div
      class="AnalyticalCard-content"
    >
      <span
        class="Text-text"
      >
        I'm a content!
      </span>
    </div>
  </ui5-card>
</DocumentFragment>
`;
